# ext1

./: dev_nb.ipynb  pyproject.toml  resp.json
src/: main.py  utils.py
templates/: template.html.j2
